# imkerutils

./: .gitignore  README.md  main.py  pyproject.toml
imkerutils/: paths.py
imkerutils/exquisite/: README.md
imkerutils/exquisite/api/: client.py  mock_client.py  mock_gpt_client.py  openai_client.py
imkerutils/exquisite/docs/arch_docs/: imkerutils_exquisite_gameplan.md  imkerutils_exquisite_master_binding_checklist_corrected (1).md  visceral_global_state_authority_graph.md
imkerutils/exquisite/geometry/: overlap_score.py  reference_tile.py  tile_mode.py
imkerutils/exquisite/io/: atomic_write.py
imkerutils/exquisite/pipeline/: session.py  step.py
imkerutils/exquisite/prompt/: builder.py  templates.py
imkerutils/exquisite/state/: session_state.py
imkerutils/exquisite/ui/: __main__.py  server.py
imkerutils/tiling_utils/: __init__.py  core.py  extract_tile.py  paste_tile.py
prompts/templates/: boundary_constrained_editing_supported.md  hard_boundary_editing_prompt_spec.md
tests/: conftest.py  test_cli_smoke.py  test_paths.py
tests/exquisite/api/: test_client_injection_phaseC.py  test_openai_client_smoke.py
tests/exquisite/geometry/: test_tile_mode_phaseA.py  test_tile_mode_phaseA_rejections.py
tests/exquisite/pipeline/: test_session_phaseB_create_and_step.py  test_session_phaseB_reopen_and_continue.py  test_step_uses_mock_client_phaseC.py
tests/exquisite/prompt/: test_prompt_builder_phaseC3.py
tests/tiling_utils/: test_tiling_core_geometry.py  test_tiling_extract_paste.py
tiling_utils/: paste_tile.py
(+15 files in other folders)
